fix seasonInfo
